feat: Glossary with BC Terminology (#515)
* Draft glossary and instructions

* Added field names and object names as txt files

* Refactor and clean up resource table names in tables.txt for consistency and clarity, including renaming, removing duplicates, and standardizing formats across various entries.

* Add glossary terms to glossary.tsv

* Add Business Central terminology analysis instructions

* Remove obsolete terms from glossary.tsv

* Add new resource table definitions to tables.txt for comprehensive data management

* Add PowerShell script for building term usage mapping and enhance glossary with descriptions

- Introduced `build-term-usages.ps1` script to generate a mapping of glossary terms to their usages in English source texts, handling variant normalization.
- Updated `glossary.tsv` to include a new `Description` column, providing concise, translation-oriented notes for each term to aid translators.
- Created `improve-glossary.instructions.md` with detailed guidelines for enhancing the glossary, including context retrieval, writing standards, and quality checks.

* Update language code in glossary.tsv from 'English' to 'en-US'

* Add language json fiiles

* Enhance improve-glossary instructions with new column 'Description' for glossary.tsv

* Remove en-us.json

* Glossary with multiple languages

* Add glossary terms for translation in multiple languages

* Move glossary.tsv

* Update package.json to include additional files for distribution

* feat: Add new tool, getGlossary

* Updated glossary with exact match

* Add translations for 'Project' in glossary.tsv

* Removed temporary files and added script to update glossary

* feat: Add documentation for new Language Model Tools and update documentation for glossary functionalities

* fix: Remove redundant verify:glossary script from package.json

* feat: Rename getGlossary to getGlossaryTerms and update related documentation

* fix: CR suggestions

--- a/extension/package.json
+++ b/extension/package.json
@@ -1326,10 +1326,107 @@
             "translations"
           ]
         }
+      },
+      {
+        "name": "getGlossaryTerms",
+        "displayName": "Get Glossary Terminology",
+        "modelDescription": "This tool returns glossary terminology pairs for a target language (and optional source language, default en-US) from a built-in glossary, based on Business Central terminology and translations. It outputs a JSON array of objects with 'source', 'target', and 'description'. Usage scenarios: (1) Pre-translation session - fetch glossary to instruct the LLM for consistent terminology. (2) Automated suggestion generation - validate/adjust outputs against approved terms. (3) Review/QA - detect and highlight deviations from glossary entries. (4) Bulk alignment or terminology normalization workflows. (5) Cross-language comparison by specifying a non-default sourceLanguageCode.",
+        "tags": [
+          "glossary",
+          "terminology",
+          "translation",
+          "localization",
+          "al",
+          "business-central",
+          "dynamics-365"
+        ],
+        "userDescription": "(beta) Retrieve glossary terminology entries for a specified target language.",
+        "canBeReferencedInPrompt": true,
+        "toolReferenceName": "nab-al-tools-getGlossaryTerms",
+        "inputSchema": {
+          "type": "object",
+          "properties": {
+            "targetLanguageCode": {
+              "type": "string",
+              "description": "Target language code for which glossary entries should be returned.",
+              "enum": [
+                "en-US",
+                "cs-cz",
+                "da-dk",
+                "de-at",
+                "de-ch",
+                "de-de",
+                "en-au",
+                "en-ca",
+                "en-gb",
+                "en-nz",
+                "es-es_tradnl",
+                "es-mx",
+                "fi-fi",
+                "fr-be",
+                "fr-ca",
+                "fr-ch",
+                "fr-fr",
+                "is-is",
+                "it-ch",
+                "it-it",
+                "nb-no",
+                "nl-be",
+                "nl-nl",
+                "sv-se"
+              ]
+            },
+            "sourceLanguageCode": {
+              "type": "string",
+              "description": "Optional source language code (default en-US) used as the source terminology column.",
+              "enum": [
+                "en-US",
+                "cs-cz",
+                "da-dk",
+                "de-at",
+                "de-ch",
+                "de-de",
+                "en-au",
+                "en-ca",
+                "en-gb",
+                "en-nz",
+                "es-es_tradnl",
+                "es-mx",
+                "fi-fi",
+                "fr-be",
+                "fr-ca",
+                "fr-ch",
+                "fr-fr",
+                "is-is",
+                "it-ch",
+                "it-it",
+                "nb-no",
+                "nl-be",
+                "nl-nl",
+                "sv-se"
+              ]
+            }
+          },
+          "required": [
+            "targetLanguageCode"
+          ]
+        }
       }
     ]
   },
   "extensionDependencies": [],
+  "files": [
+    "dist",
+    "frontend",
+    "resources/glossary.tsv",
+    "snippets",
+    "syntaxes",
+    "icon.png",
+    "README.md",
+    "LICENSE.MD",
+    "MCP_SERVER.md",
+    "CHANGELOG.md"
+  ],
   "scripts": {
     "vscode:prepublish": "webpack --mode production",
     "webpack": "webpack --mode development",
