--- a/extension/package.json
+++ b/extension/package.json
@@ -1068,7 +1068,7 @@
           "properties": {
             "generatedXlfFilePath": {
               "type": "string",
-              "description": "The absolute path to the generated XLF file. The file is named '[app name].g.xlf', and the app name can be found in the app.json file. Example: For the app called 'My App', the generated Xlf file will be named 'My App.g.xlf'. This file is found in the Translations folder, which is the same folder as the target XLF file. Note that this file is often added to .gitignore, so you may need to show hidden and ignored files to find it."
+              "description": "The absolute path to the generated XLF file. The file is named '[app name].g.xlf', and the app name can be found in the app.json file. Example: For the app called 'My App', the generated Xlf file will be named 'My App.g.xlf'. This file is found in the Translations folder, which is the same folder as the target XLF file. This g.xlf file is automatically created and/or updated during AL compilation. Note that this file is often added to .gitignore, so you may need to show hidden and ignored files to find it."
             },
             "filePath": {
               "type": "string",
@@ -1350,7 +1350,7 @@
               "type": "string",
               "description": "Target language code for which glossary entries should be returned.",
               "enum": [
-                "en-US",
+                "en-us",
                 "cs-cz",
                 "da-dk",
                 "de-at",
@@ -1380,7 +1380,7 @@
               "type": "string",
               "description": "Optional source language code (default en-US) used as the source terminology column.",
               "enum": [
-                "en-US",
+                "en-us",
                 "cs-cz",
                 "da-dk",
                 "de-at",
