--- a/extension/package.json
+++ b/extension/package.json
@@ -1328,6 +1328,44 @@
         }
       },
       {
+        "name": "createLanguageXlf",
+        "displayName": "Create Target Language XLF File",
+        "modelDescription": "This tool creates a new XLF file for a specified target language based on a generated XLF file. It takes a generated XLF file path (*.g.xlf), a target language code, and optional parameters to match translations from the base app. The tool creates a new XLF file ready for translation, optionally pre-populated with matching translations from Microsoft's base application. This streamlines the localization workflow by providing a foundation for translating AL extensions to new languages.",
+        "tags": [
+          "xliff",
+          "translation",
+          "localization",
+          "internationalization",
+          "al",
+          "business-central",
+          "dynamics-365"
+        ],
+        "userDescription": "(beta) This tool creates a new XLF file for a specified target language.",
+        "canBeReferencedInPrompt": true,
+        "toolReferenceName": "nab-al-tools-createLanguageXlf",
+        "inputSchema": {
+          "type": "object",
+          "properties": {
+            "generatedXlfFilePath": {
+              "type": "string",
+              "description": "The absolute path to the generated XLF file (*.g.xlf) created by AL compilation. This file is found in the Translations folder and is automatically created during AL compilation."
+            },
+            "targetLanguageCode": {
+              "type": "string",
+              "description": "Language code for the new XLF file (e.g., 'sv-SE', 'da-DK', 'de-DE')."
+            },
+            "matchBaseAppTranslation": {
+              "type": "boolean",
+              "description": "Whether to match translations from the base app (default: true). When enabled, the tool will pre-populate the new XLF file with matching translations from Microsoft's base application."
+            }
+          },
+          "required": [
+            "generatedXlfFilePath",
+            "targetLanguageCode"
+          ]
+        }
+      },
+      {
         "name": "getGlossaryTerms",
         "displayName": "Get Glossary Terminology",
         "modelDescription": "This tool returns glossary terminology pairs for a target language (and optional source language, default en-US) from a built-in glossary, based on Business Central terminology and translations. It outputs a JSON array of objects with 'source', 'target', and 'description'. Usage scenarios: (1) Pre-translation session - fetch glossary to instruct the LLM for consistent terminology. (2) Automated suggestion generation - validate/adjust outputs against approved terms. (3) Review/QA - detect and highlight deviations from glossary entries. (4) Bulk alignment or terminology normalization workflows. (5) Cross-language comparison by specifying a non-default sourceLanguageCode.",
