feat: rename prepare-copilot-environment.ps1 for environment setup and testing

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -37,4 +37,4 @@ jobs:
         continue-on-error: false
         shell: pwsh
         run: |
-          . (Join-Path ($pwd.path) '.github\copilot-scripts.ps1' -resolve)
+          . (Join-Path ($pwd.path) '.github\prepare-copilot-environment.ps1' -resolve)
