--- a/extension/package.json
+++ b/extension/package.json
@@ -1174,11 +1174,11 @@
       {
         "name": "getTextsByKeyword",
         "displayName": "Get Texts By Keyword from an XLF file",
-        "modelDescription": "This tool searches source texts in a specified XLF file for a given keyword or regular expression and returns matching translation units (includes untranslated units). It can be used to discover how a specific word or phrase is used across the application and to inspect how that word or phrase has been translated in different contexts.",
+        "modelDescription": "This tool searches source or target texts in a specified XLF file for a given keyword or regular expression and returns matching translation units. By default, it searches in source texts (includes untranslated units). When searchInTarget is true, it searches only in target texts (excludes untranslated units). Use this to discover how a specific word or phrase is used across the application and to inspect how it has been translated in different contexts.",
         "tags": [
           "dynamics-365"
         ],
-        "userDescription": "(beta) Search source texts by keyword or regex in an XLF file. Use this to discover where a word or phrase appears and how it has been translated across contexts.",
+        "userDescription": "(beta) Search source or target texts by keyword or regex in an XLF file. Use this to discover where a word or phrase appears and how it has been translated across contexts.",
         "canBeReferencedInPrompt": true,
         "toolReferenceName": "nab-al-tools-getTextsByKeyword",
         "inputSchema": {
@@ -1198,7 +1198,7 @@
             },
             "keyword": {
               "type": "string",
-              "description": "The keyword or regex pattern to search for in the source text."
+              "description": "The keyword or regex pattern to search for in the source or target text."
             },
             "caseSensitive": {
               "type": "boolean",
@@ -1207,6 +1207,10 @@
             "isRegex": {
               "type": "boolean",
               "description": "Treat the 'keyword' parameter as a regular expression (default false)."
+            },
+            "searchInTarget": {
+              "type": "boolean",
+              "description": "Search in target text instead of source text (default false). When true, only translated units with matching target text are returned."
             }
           },
           "required": [
