chore: update author and contributor URLs to the correct domain

--- a/extension/package.json
+++ b/extension/package.json
@@ -19,17 +19,17 @@
     "ERP"
   ],
   "author": {
-    "url": "https://www.nabsolutions.se",
+    "url": "https://www.nabsolutions.com",
     "name": "Johannes Wikman"
   },
   "contributors": [
     {
       "name": "Johannes Wikman",
-      "url": "https://www.nabsolutions.se"
+      "url": "https://www.nabsolutions.com"
     },
     {
       "name": "Alexander Jangmo",
-      "url": "https://www.nabsolutions.se"
+      "url": "https://www.nabsolutions.com"
     }
   ],
   "icon": "icon.png",
