--- a/extension/package.json
+++ b/extension/package.json
@@ -1477,6 +1477,7 @@
   ],
   "scripts": {
     "vscode:prepublish": "webpack --mode production",
+    "webpack-prod": "webpack --mode production",
     "webpack": "webpack --mode development",
     "webpack-dev": "webpack --mode development --watch",
     "compile": "webpack",
