--- a/extension/mcp-resources/package.json
+++ b/extension/mcp-resources/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jwikman/nab-al-tools"
+    "url": "https://github.com/jwikman/nab-al-tools.git"
   },
   "homepage": "https://github.com/jwikman/nab-al-tools",
   "bugs": {
