--- a/extension/package.json
+++ b/extension/package.json
@@ -1466,7 +1466,7 @@
   "files": [
     "dist",
     "frontend",
-    "resources/glossary.tsv",
+    "src/mcp/glossary.tsv",
     "snippets",
     "syntaxes",
     "icon.png",
