--- a/extension/package.json
+++ b/extension/package.json
@@ -1404,60 +1404,60 @@
               "type": "string",
               "description": "Target language code for which glossary entries should be returned.",
               "enum": [
-                "en-us",
-                "cs-cz",
-                "da-dk",
-                "de-at",
-                "de-ch",
-                "de-de",
-                "en-au",
-                "en-ca",
-                "en-gb",
-                "en-nz",
-                "es-es_tradnl",
-                "es-mx",
-                "fi-fi",
-                "fr-be",
-                "fr-ca",
-                "fr-ch",
-                "fr-fr",
-                "is-is",
-                "it-ch",
-                "it-it",
-                "nb-no",
-                "nl-be",
-                "nl-nl",
-                "sv-se"
+                "en-US",
+                "cs-CZ",
+                "da-DK",
+                "de-AT",
+                "de-CH",
+                "de-DE",
+                "en-AU",
+                "en-CA",
+                "en-GB",
+                "en-NZ",
+                "es-ES_tradnl",
+                "es-MX",
+                "fi-FI",
+                "fr-BE",
+                "fr-CA",
+                "fr-CH",
+                "fr-FR",
+                "is-IS",
+                "it-CH",
+                "it-IT",
+                "nb-NO",
+                "nl-BE",
+                "nl-NL",
+                "sv-SE"
               ]
             },
             "sourceLanguageCode": {
               "type": "string",
               "description": "Optional source language code (default en-US) used as the source terminology column.",
               "enum": [
-                "en-us",
-                "cs-cz",
-                "da-dk",
-                "de-at",
-                "de-ch",
-                "de-de",
-                "en-au",
-                "en-ca",
-                "en-gb",
-                "en-nz",
-                "es-es_tradnl",
-                "es-mx",
-                "fi-fi",
-                "fr-be",
-                "fr-ca",
-                "fr-ch",
-                "fr-fr",
-                "is-is",
-                "it-ch",
-                "it-it",
-                "nb-no",
-                "nl-be",
-                "nl-nl",
-                "sv-se"
+                "en-US",
+                "cs-CZ",
+                "da-DK",
+                "de-AT",
+                "de-CH",
+                "de-DE",
+                "en-AU",
+                "en-CA",
+                "en-GB",
+                "en-NZ",
+                "es-ES_tradnl",
+                "es-MX",
+                "fi-FI",
+                "fr-BE",
+                "fr-CA",
+                "fr-CH",
+                "fr-FR",
+                "is-IS",
+                "it-CH",
+                "it-IT",
+                "nb-NO",
+                "nl-BE",
+                "nl-NL",
+                "sv-SE"
               ]
             }
           },
