--- a/extension/mcp-resources/package.json
+++ b/extension/mcp-resources/package.json
@@ -32,7 +32,7 @@
     "name": "Johannes Wikman"
   },
   "engines": {
-    "node": "^20.0.0"
+    "node": ">=22.0.0"
   },
   "files": [
     "server.js",
