--- a/extension/package.json
+++ b/extension/package.json
@@ -38,7 +38,7 @@
   },
   "engines": {
     "vscode": "^1.102.0",
-    "node": "^20.0.0"
+    "node": ">=22.0.0"
   },
   "categories": [
     "Other",
