--- a/extension/package.json
+++ b/extension/package.json
@@ -1516,8 +1516,8 @@
     "format-duration": "^1.3.1",
     "graceful-fs": "^4.2.11",
     "js-yaml": "^4.1.1",
-    "lodash": "^4.17.21",
     "jsonrepair": "^3.13.0",
+    "lodash": "^4.17.21",
     "minimatch": "^3.0.4",
     "node-powershell": "^3.3.1",
     "original-fs": "^1.1.0",
@@ -1545,20 +1545,21 @@
     "@types/uuid": "^8.3.3",
     "@types/vscode": "^1.102.0",
     "@types/xmldom": "^0.1.30",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "@vscode/test-electron": "^2.1.3",
-    "eslint": "^7.26.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "glob": "^7.1.7",
+    "globals": "^16.5.0",
     "madge": "^4.0.2",
     "mocha": "^11.1.0",
     "nyc": "^15.1.0",
     "prettier": "2.2.1",
     "ts-loader": "^9.1.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.2.4",
+    "typescript": "^5.5.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^4.7.0"
   }
