--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -22,11 +22,14 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedParameters": true
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     ".vscode-test",
-    "node_modules/@modelcontextprotocol/sdk/**/*",
     "**/.tmp/**/*",
-    "mcp-resources"
+    "mcp-resources",
+    "src/mcp/**/*"
   ]
 }
