fix: update ESLint configuration and improve error handling in various files

--- a/extension/package.json
+++ b/extension/package.json
@@ -1500,8 +1500,8 @@
     "test-compile": "tsc -p ./",
     "test-watch": "tsc -watch -p ./",
     "pretest": "npm run test-compile && npm run lint",
-    "lint": "eslint src --ext .js,.ts",
-    "lint:fix": "eslint src --fix --ext .js,.ts .",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "test": "node ./out/test/runTest.js",
     "pretest:coverage": "npm run test-compile && npm run lint",
     "test:coverage": "node ./out/test/runTest-coverage.js",
