feat: Add NAB-AL-Translator agent and translation prompt files (#556)
This pull request introduces a major new feature: the NAB-XLF-Translator
agent, which provides an automated, high-quality workflow for
translating Business Central AL XLF localization files. The agent is
fully documented, integrated into the extension, and accessible via a
dedicated prompt. The update also adds user-facing documentation and
changelog entries describing the new translation capabilities.

**Key changes:**

### New Translation Agent and Prompt

* Added the `NAB-XLF-Translator` agent, a specialized AI assistant for
translating AL XLF files. It provides comprehensive instructions for app
discovery, language code derivation, glossary integration, batch
processing, error handling, and quality controls, ensuring terminology
consistency and adherence to Business Central UI standards.
* Added a `translateXlfFiles` prompt file that works with the new agent
and guides users through the translation workflow, including app
selection and batch translation policies.

### Extension Integration

* Registered the new agent and prompt in `package.json`, making them
available within the extension's chat interface.

### Documentation Updates

* Updated the `README.md` to document the NAB-XLF-Translator agent, its
features, workflow, usage instructions, and integration with the new
prompt.
[[1]](diffhunk://#diff-7a10f33fd65f6692603aa7fe85eb9cdb287ed5db10964d2d2cbe651960d7aa63R58)
[[2]](diffhunk://#diff-7a10f33fd65f6692603aa7fe85eb9cdb287ed5db10964d2d2cbe651960d7aa63R447-R510)
* Added a changelog entry summarizing the addition of the
NAB-XLF-Translator agent and its capabilities.

--- a/extension/package.json
+++ b/extension/package.json
@@ -1509,10 +1509,25 @@
           ]
         }
       }
+    ],
+    "chatAgents": [
+      {
+        "name": "NAB-XLF-Translator",
+        "path": "./assets/agents/NAB-XLF-Translator.agent.md",
+        "description": "Assist with translating XLF files for AL extensions in Business Central"
+      }
+    ],
+    "chatPromptFiles": [
+      {
+        "name": "translateXlfFiles",
+        "path": "./assets/prompts/translateXlfFiles.prompt.md",
+        "description": "Prompt for translating XLF files using LLM"
+      }
     ]
   },
   "extensionDependencies": [],
   "files": [
+    "assets",
     "dist",
     "frontend",
     "src/mcp/glossary.tsv",
