feat: add CLI script paths to output in Publish-ToMarketplace workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -116,4 +116,4 @@ jobs:
           token: ${{ secrets.PAT }}
           tag: ${{ steps.packageVSIX.outputs.tagName }}
           prerelease: ${{env.RELEASE_TYPE == 'pre-release'}}
-          artifacts: "${{ steps.packageVSIX.outputs.vsixPath }},${{ steps.packageVSIX.outputs.mcpServerPath }}"
+          artifacts: "${{ steps.packageVSIX.outputs.vsixPath }},${{ steps.packageVSIX.outputs.mcpServerPath }},${{ steps.packageVSIX.outputs.cliRefreshXlfPath }},${{ steps.packageVSIX.outputs.cliCreateDocPath }}"
