--- a/extension/.vscode/settings.json
+++ b/extension/.vscode/settings.json
@@ -1,2 +1,6 @@
-// Place your settings in this file to overwrite default and user settings.
-{}
+{
+  "search.exclude": {
+    "out/**": true,
+    "dist/**": true
+  }
+}
