--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,11 +26,18 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
         working-directory: ${{env.working-directory}}
+      - run: npx prettier --check .
+        working-directory: ${{env.working-directory}}
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1
         with:
           run: npm run test
           working-directory: ${{env.working-directory}}
+      - name: Check Circular Dependencies
+        run: |
+          node node_modules/madge/bin/cli.js --warning --circular --extensions ts src/extension.ts
+          node node_modules/madge/bin/cli.js --warning --image dependency-graph-ts.svg --extensions ts src/extension.ts
+        working-directory: ${{env.working-directory}}
       - name: Test CLI functions
         shell: pwsh
         run: |
