--- a/.github/workflows/nerd-stuff.yml
+++ b/.github/workflows/nerd-stuff.yml
@@ -26,6 +26,13 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
         working-directory: ${{env.working-directory}}
+      - run: npx prettier --check .
+        working-directory: ${{env.working-directory}}
+      - name: Check Circular Dependencies
+        run: |
+          node node_modules/madge/bin/cli.js --warning --circular --extensions ts src/extension.ts
+          node node_modules/madge/bin/cli.js --warning --image dependency-graph-ts.svg --extensions ts src/extension.ts
+        working-directory: ${{env.working-directory}}
       - name: Upload Dependency Graph
         uses: actions/upload-artifact@v4
         with:
