--- a/extension/package.json
+++ b/extension/package.json
@@ -1454,6 +1454,18 @@
         "description": "Assist with translating XLF files for AL extensions in Business Central"
       }
     ],
+    "chatInstructions": [
+      {
+        "name": "translation-workflow",
+        "path": "./assets/instructions/translation-workflow.instructions.md",
+        "description": "Instructions for translating XLF files using a structured workflow with LLM assistance"
+      },
+      {
+        "name": "review-workflow",
+        "path": "./assets/instructions/review-workflow.instructions.md",
+        "description": "Instructions for reviewing translations needing approval in XLF files using a structured workflow with LLM assistance"
+      }
+    ],
     "chatPromptFiles": [
       {
         "name": "translateXlfFiles",
