--- a/extension/package.json
+++ b/extension/package.json
@@ -1414,7 +1414,7 @@
       {
         "name": "openFile",
         "displayName": "Open and Focus File in Editor",
-        "modelDescription": "Opens and focuses a file in VS Code editor with optional cursor positioning. Accepts file path (absolute or relative to workspace), optional line number and column number. CRITICAL: Many AL extension tools (build, compile, publish, download symbols) require the target file to be focused first - always call this tool before invoking AL build operations if the file isn't currently active. IMPORTANT: Use exact line numbers from actual file content, never approximations like 'around line 15'. Line positioning is 1-based.",
+        "modelDescription": "Opens and focuses a file in VS Code editor with optional cursor positioning. Accepts file path (absolute or relative to workspace), optional line number and column number. CRITICAL: Many AL extension tools (al_build, al_buildall, al_package, al_publish, al_downloadsymbols) require the target file to be focused first - always call this tool before invoking any of these AL operations if the file isn't currently active.",
         "tags": [
           "file",
           "editor",
