--- a/extension/package.json
+++ b/extension/package.json
@@ -1491,9 +1491,11 @@
     "package": "webpack --mode production --devtool hidden-source-map",
     "test-compile": "tsc -p ./",
     "test-watch": "tsc -watch -p ./",
+    "prettier:check": "prettier --check .",
+    "prettier:write": "prettier --write .",
     "pretest": "npm run test-compile && npm run lint",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
+    "lint": "prettier --check . && eslint src",
+    "lint:fix": "prettier --write . && eslint src --fix",
     "test": "node ./out/test/runTest.js",
     "pretest:coverage": "npm run test-compile && npm run lint",
     "test:coverage": "node ./out/test/runTest-coverage.js",
