refactor: update documentation for clarity and consistency; replace "comprehensive" with "complete" and remove marketing terms

--- a/extension/package.json
+++ b/extension/package.json
@@ -183,11 +183,11 @@
       },
       {
         "command": "nab.UpdateGXlfFile",
-        "title": "NAB: Update g.xlf"
+        "title": "NAB: Update g.xlf ⚠️ (Experimental)"
       },
       {
         "command": "nab.UpdateAllXlfFiles",
-        "title": "NAB: Update all XLF files"
+        "title": "NAB: Update all XLF files ⚠️ (Experimental)"
       },
       {
         "command": "nab.SuggestToolTips",
